Issue #2206923 by Uccio: Fixed Uninstall of workflow_actions doesn't remove actions.
Issue #2208971 by johnv: Fixed refresh entity_cache upon saving new workflow_node state in WorkflowTransition->execute().
Issue #2209359 by 2pha, johnv: Fixed workflow_access and other workflow_submodules when $field_name is not known.
Issue #2207423 by johnv: Removed double lock on workflow_actions for workflow_field.
Issue #2210787 by johnv: Fixed avoid calling 'transition post' twice when workflow_actions is enabled.
Issue #2207423 by johnv: Fixed hook_workflow('transition post') is now called also for workflow_field on the correct moment.
Issue #0843568 by johnv: Added 'revision_id' to {workflow_node_history} when saving a transition.
Issue #2207423 by johnv: Fixed hook_workflow('transition post') is now called only in workflow_actions, avoiding extra hook in other cases.
Issue #2212197 by johnv: Fixed access to workflow history tab per role.
Issue #2102409 by johnv: Fixed multiple workflow_fields per bundle, when saving a new entity.
Issue #2207423 by johnv: Fixed workflow_actions' hook_workflow('transition post') also for non-node entities.
Issue #2102409 by johnv: Fixed multiple workflow_fields per bundle, in workflow_access.
Issue #2216641 by johnv: Fixed notices by workflow_access when saving a node without workflow.
Issue #2216685 by Bastlynn: Fixed WSOD.
Issue #2216685 by Bastlynn: Fixed WSOD, part 2.
Issue #2216685 by johnv: Further cleanup and unification of workflow_node and workflow_field.
Issue #2116179 by johnv: Some more isolation of type_map functions.
Issue #2216685 by johnv: Further cleanup for workflow_vbo.
Issue #2168197 by johnv: Separated workflow_vbo actions into own files, for less footprint and better maintainability.
Issue #2218303 by johnv: Fixed error if you try to assign a state to a non-relevant node type (e.g. in workflow_vbo action).
